--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+#API KEYS
+WEATHER_API_KEY=1db914c623ec2e5caba5ddfe8e12b0de
+LOCATION_API_KEY=1622e930-ac9d-11ed-a940-ffdae417e345
